sticking with elixir 1.1.1 for now

--- a/provision/elixir/tasks/main.yml
+++ b/provision/elixir/tasks/main.yml
@@ -6,22 +6,22 @@
     url="https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb"
     dest="/home/vagrant/erlang-solutions_1.0_all.deb"
 
-- name: Download enterprise erlang
-  get_url: 
-    url="https://packages.erlang-solutions.com/erlang/esl-erlang/FLAVOUR_2_esl/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb"
-    dest="/home/vagrant/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb"
-
-- name: Install required packages
-  apt: pkg={{ item }} state=installed update_cache=yes
-  with_items:
-    - libwxbase3.0-0
-    - libwxgtk3.0-0 
-
-- name: dpkg -i 
+- name: dpkg -i erlang solutions deb 
   shell: sudo dpkg -i /home/vagrant/erlang-solutions_1.0_all.deb
 
-- name: dpkg -i 
-  shell: sudo dpkg -i /home/vagrant/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb
+#- name: Download enterprise erlang
+#  get_url: 
+#    url="https://packages.erlang-solutions.com/erlang/esl-erlang/FLAVOUR_2_esl/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb"
+#    dest="/home/vagrant/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb"
+
+#- name: Install required packages
+#  apt: pkg={{ item }} state=installed update_cache=yes
+#  with_items:
+#    - libwxbase3.0-0
+#    - libwxgtk3.0-0 
+
+#- name: dpkg -i 
+#  shell: sudo dpkg -i /home/vagrant/esl-erlang_18.2-2~ubuntu~trusty_amd64.deb
 
 - name: Install required packages
   apt: pkg={{ item }} state=installed update_cache=yes
@@ -29,7 +29,6 @@
     - ntp
     - git
     - vim
-    - erlang
     - esl-erlang 
     - elixir
     - inotify-tools
