--- a/provision/phoenix/vars/main.yml
+++ b/provision/phoenix/vars/main.yml
@@ -1,2 +1,2 @@
-phoenix_version_url: https://github.com/phoenixframework/phoenix/releases/download/v1.1.0/phoenix_new-1.1.0.ez
-phoenix_version: phoenix_new-1.1.0.ez
+phoenix_version_url: https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez
+phoenix_version: phoenix_new.ez
